--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,148 @@
-:root {}
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,700;1,400&family=Raleway:wght@400;700&display=swap');
+
+:root {
+  --bg-navegation: #BE3144;
+
+  --bg-welcome: #28292B;
+  --bg-projects: #45567D;
+  --bg-contact: #303841;
+
+  --text-color: #ffffff;
+  --text-secundary-color: #A62D31;
+
+  --primary-font: 'Poppins', sans-serif;
+  --secundary-font: 'Raleway', sans-serif;
+}
 
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+}
+
+body {
+  font-family: var(--primary-font);
+}
+
+#navbar {
+  background-color: var(--bg-navegation);
+  padding: 0 20px 0 20px;
+}
+
+#navbar ul {
+  display: flex;
+  justify-content: center;
+  justify-content: flex-end;
+  list-style: none;
+}
+
+#navbar ul li a {
+  display: inline-block;
+  text-decoration: none;
+  color: var(--text-color);
+  font-size: 20px;
+  padding: 18px;
+}
+
+#navbar ul li a:hover {
+  background-color: var(--bg-projects);
+}
+
+#welcome-section {
+  height: calc(100vh - 66.4px);
+  background-color: var(--bg-welcome);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+}
+
+#welcome-section h1 {
+  color: var(--text-color);
+  font-size: 55px;
+  font-family: var(--secundary-font);
+}
+
+#welcome-section p {
+  color: var(--text-secundary-color);
+  font-size: 28px;
+  font-style: italic;
+  font-weight: 400;
+}
+
+#projects {
+  background-color: var(--bg-projects);
+  padding: 90px 18px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 50px;
+}
+
+#projects h2 {
+  color: var(--text-color);
+  font-size: 39px;
+  border-bottom: 2px solid var(--text-color);
+  padding: 0 20px 5px 20px;
+}
+
+.projects-content {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+  grid-gap: 4rem;
+  width: 100%;
+  max-width: 1280px;
+  margin: 0 auto;
+
+}
+
+#projects a {
+  text-decoration: none;
+  text-align: center;
+}
+
+#projects a img {
+  display: block;
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+}
+
+#projects p {
+  background-color: var(--bg-contact);
+  color: var(--text-color);
+  padding: 20px 0;
+  font-size: 19px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+}
+
+#projects p .code {
+  color: var(--bg-contact);
+  font-size: 20px;
+  transition: color 0.2s ease-out;
+}
+
+#projects a:hover .code {
+  color: var(--bg-navegation);
+}
+
+#projects .btn {
+  background-color: var(--bg-contact);
+  color: var(--text-color);
+  padding: 10px 20px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  transition: background 0.3s ease-out;
+}
+
+#projects .btn:hover {
+  background-color: var(--bg-navegation);
 }
